BAMPFA-449: Change DocDetail.authors from a hashtable to a list.

--- a/src/main/webapp/include/doccite.jspf
+++ b/src/main/webapp/include/doccite.jspf
@@ -17,7 +17,7 @@
          </c:if>
 
          <c:forEach var="item" items="${docdetail.authors}">
-            ${item.value}<br />
+            ${item}<br />
          </c:forEach><br />
 
          <citation>SOURCE</citation><br />
