--- a/src/main/webapp/css/general.css
+++ b/src/main/webapp/css/general.css
@@ -225,7 +225,7 @@ div#footer
 div#footer img
 {
   left: 0px;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
   position: relative;	
 }
 
@@ -234,6 +234,7 @@ div#footer img.logo {
   position: absolute;
   top: -38px;
   left: -14px;
+  margin: 0;
   z-index: 1;
 }
 
